--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
   - docker build -t john7ric/multi-client-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docekr run -e CI=true john7ric/multi-client-test npm run test
+  - docker run -e CI=true john7ric/multi-client-test npm run test
+  
 
 after_success:
   # building production images
