--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,16 @@
 FROM node:alpine
+
 WORKDIR "/app"
+
 COPY ./package.json ./
 RUN npm install
-COPY . .
-CMD ["npm", "run", "build"]
 
-FROM node:alpine
+COPY . .
+RUN npm run build
+
+FROM nginx
 
 WORKDIR /app
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.f/default.conf
-COPY --from=0 /app/build /usr/shared/nginx/html
+COPY --from=0 /app/build /usr/share/nginx/html
