--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,7 +10,6 @@ RUN npm run build
 
 FROM nginx
 
-WORKDIR /app
 EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.f/default.conf
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=0 /app/build /usr/share/nginx/html
